--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,6 +360,7 @@ hr {
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   display: none;
+  transition: 2s;
 }
 .popUp2 {
   width: 50%;
@@ -429,10 +430,10 @@ hr {
 
 .drawerPopup {
   width: 100%;
-  height: 5000px;
+  /* height: 5000px; */
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
-  margin-top: -2000px;
+  /* margin-top: -2000px; */
   z-index: 0;
   display: none;
 }
